--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EVOLUA - Avaliação de Desempenho</title>
+    <title>e-volua - Avaliação de Desempenho</title>
     <meta name="description" content="Sistema de avaliação de desempenho de alunos em aulas práticas" />
   </head>
   <body>
